# SeeQL

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FRONTEND_CLAUDE.md  IMPLEMENTATION.md  LICENSE  Makefile  PLAN.md  README.md  SETUP.md  TODOS.md  docker-compose.gcp.yml  docker-compose.yml  main.py  pyproject.toml  seeql.example.yml
agent/: llm_agent.py  prompts.py  queries.py  replay.py  state_builder.py  tools.py
alerting/: anomaly.py  anomaly_store.py  budget.py  channels.py  engine.py  incidents.py  investigator.py  models.py  phase3.py  rules.py
api/: agent_routes.py  app.py  dashboard_api.py  dashboard_routes.py  prometheus.py  query_helpers.py  remediation.py  routes.py  webhook_routes.py
collectors/: __init__.py  base.py  execution_stages.py  explain_capture.py  fast_loop.py  gcp_metrics.py  gcp_slow_log.py  global_variables.py  index_analysis.py  innodb_status.py  medium_loop.py  queries.py  slow_loop.py
config/: __init__.py  server_context.py  server_registry.py  settings.dev.yaml  settings.test.yaml  settings.yaml
docs/: README.md  agent.md  alerting.md  api.md  architecture.md  cli.md  collectors.md  config.md  contributing.md  dashboard.md  deployment.md  incidents.md  mcp.md  troubleshooting.md  tutorial-first-incident.md
mcp_server/: __init__.py  prompts.py  resources.py  safety.py  server.py
parsers/: global_status.py  innodb_status.py
scheduler/: runner.py
seeql/: __init__.py  doctor.py  errors.py
storage/: connection.py  migrations.py  retention.py  schema.sql  writer.py
templates/: base.html
tests/: conftest.py  test_anomaly.py  test_api.py  test_budget.py  test_cli_investigations.py  test_collectors.py  test_config.py  test_doctor.py  test_errors.py  test_inbound_adapters.py  test_incidents.py  test_integration.py  test_investigator.py  test_llm_agent.py  test_mcp_http_auth.py  test_mcp_resources_prompts.py  test_mcp_safety.py  test_mcp_server.py  test_mcp_tools_action.py  test_mcp_tools_live.py  test_mcp_tools_readonly.py  test_mcp_transport_stdio.py  test_missing_index_correlation.py  test_parsers.py  test_phase3.py  test_replay.py  test_retention.py  test_rules.py  test_storage.py  test_webhook_routes.py
(+51 files in other folders)
