[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seeql"
version = "0.1.0"
description = "SeeQL — LLM-powered MySQL DBA agent with anomaly detection and incident replay"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SeeQL contributors"},
]
keywords = ["mysql", "dba", "monitoring", "llm", "observability", "incident-replay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mysql-connector-python>=8.0.33",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "anthropic>=0.39.0",
    "prometheus_client>=0.19.0",
]

[project.scripts]
seeql = "main:main"

[project.urls]
Homepage = "https://github.com/shubhankar-mohan/SeeQL"
Documentation = "https://github.com/shubhankar-mohan/SeeQL#readme"
Issues = "https://github.com/shubhankar-mohan/SeeQL/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-mock>=3.12", "ruff>=0.1.0", "httpx>=0.25"]
api = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "jinja2>=3.1", "aiofiles>=23.0"]
# GCP extra: Cloud Monitoring + Cloud Logging collectors, plus google-genai
# for Gemini / Vertex AI Claude via the google SDK path.
gcp = [
    "google-cloud-monitoring>=2.16.0",
    "google-cloud-logging>=3.8.0",
    "google-genai>=0.3.0",
]

[tool.setuptools]
# `main.py` lives at the repo root — expose it so the `seeql` script entry
# point (`seeql = "main:main"`) can import it from site-packages.
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["config*", "collectors*", "storage*", "parsers*", "scheduler*", "api*", "agent*", "alerting*", "seeql*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
